SEO updates and project improvements

--- a/index.html
+++ b/index.html
@@ -7,7 +7,48 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Jersey+10&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Love kumar Portfolio</title>
+    <meta name="description" content="Love Kumar Portfolio — A passionate developer exploring React, Node.js, Express, and MongoDB. Check out projects showcasing backend and frontend skills, learning journey, and web development expertise.">
+    <meta name="keywords" content="Love Kumar, Full Stack Developer, React Developer, Portfolio, Node.js, MongoDB">
+
+
+    <!-- SEO WORK -->
+     <!-- Open Graph / Facebook -->
+<meta property="og:title" content="Love Kumar | Full Stack Developer">
+<meta property="og:description" content="Portfolio of Love Kumar showcasing React, Node.js, MongoDB projects and skills.">
+<meta property="og:image" content="/image.png">
+<meta property="og:url" content="https://github.com/Lovekumar-10/My-Portfolio">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Love Kumar | Full Stack Developer">
+<meta name="twitter:description" content="Portfolio showcasing projects built with React, Node.js, MongoDB, and more.">
+<meta name="twitter:image" content="/image.png">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Love Kumar",
+  "url": "https://github.com/Lovekumar-10/My-Portfolio",
+  "sameAs": [
+    "https://github.com/Lovekumar-10",
+    "https://www.linkedin.com/in/love-kumar96",
+    "https://www.instagram.com/love_kumar9654/",
+    "https://wa.me/9654662096"
+  ],
+  "jobTitle": "Full Stack Developer",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Self-Employed"
+  }
+}
+</script>
+
+
+     
+
+    <title>Love Kumar | Full Stack Developer | Portfolio</title>
 
      <!-- Microsoft Clarity Tracking Code -->
     <script type="text/javascript">
