--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
      <!-- Open Graph / Facebook -->
 <meta property="og:title" content="Love Kumar | Full Stack Developer">
 <meta property="og:description" content="Portfolio of Love Kumar showcasing React, Node.js, MongoDB projects and skills.">
-<meta property="og:image" content="/image.png">
-<meta property="og:url" content="https://github.com/Lovekumar-10/My-Portfolio">
+<meta property="og:image" content="/images/image.png">
+<meta property="og:url" content="https://lovekumar.vercel.app/">
 <meta property="og:type" content="website">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Love Kumar | Full Stack Developer">
 <meta name="twitter:description" content="Portfolio showcasing projects built with React, Node.js, MongoDB, and more.">
-<meta name="twitter:image" content="/image.png">
+<meta name="twitter:image" content="/images/image.png">
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Person",
   "name": "Love Kumar",
-  "url": "https://github.com/Lovekumar-10/My-Portfolio",
+  "url": "https://lovekumar.vercel.app/",
   "sameAs": [
     "https://github.com/Lovekumar-10",
     "https://www.linkedin.com/in/love-kumar96",
